seccion-21/172-ingress-rules-host-y-path/k8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-svc
                port:
                  number: 8080
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: ingress-svc
                port:
                  number: 8080
